--- a/jsonconfig.json
+++ b/jsonconfig.json
@@ -6,6 +6,7 @@
       "@resources": ["src/resources/"],
       "@assets": ["src/resources/assets/"],
       "@booksImagesPath": ["src/resources/assets/booksImages/"],
+      "@iconsPath": ["src/resources/assets/icons/"],
       "@components": ["src/components/"],
       "@utils": ["src/utils/"],
       "@pages": ["src/pages/"],
