--- a/jsonconfig.json
+++ b/jsonconfig.json
@@ -10,7 +10,8 @@
       "@components": ["src/components/"],
       "@utils": ["src/utils/"],
       "@pages": ["src/pages/"],
-      "@styles": ["src/styles/"]
+      "@styles": ["src/styles/"],
+      "@hooks": ["/src/hooks"]
     }
   }
 }
